Clean up OSGi classes
The following commit cleans up the OSGi classes by

- use proper logging instead of printStackTrace
- add proper logging guards
- remove unused imports
- remove confusing TAMAYA from the log
- do not use deprecated Class.newInstance() method
- get rid of raw type warnings by using generics
- use safe publication for OSGIActivator.serviceProvider
- at least log an exception when it is swallowed
- document empty method body (codacy)